--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main id="container">
 			<div id="title">
-				<h1 id="test">Conversor de color HEX/RGB</h1>
+				<h1>Conversor de color HEX/RGB</h1>
 				<a id="link" target=”_blank” href="https://www.twitter.com/rotoforze">By rotoforze</a>
 			</div>
 			<div id="contenido">
